<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="settings">Settings</string>
    <string name="add_card">Add card</string>
    <string name="app_name">Simple Vocabulary</string>
    <string name="cancel">Cancel</string>
    <string name="cards">Cards</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_all_description">Are you sure you want to clear all cards?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="content_description">Content</string>
    <string name="continue_str">Continue</string>
    <string name="continue_studying_the_card">Continue studying the card</string>
    <string name="copied">Copied</string>
    <string name="copy">Copy</string>
    <string name="create_card">Create card</string>
    <string name="create_set">Create study set</string>
    <string name="add_set">Add set</string>
    <string name="dark_mode">Dark mode</string>
    <string name="share_application">Share application</string>
    <string name="light_mode">Light mode</string>
    <string name="csv_file_generated">CSV file generated!</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="reset_title">Are you sure you want to reset your progress?</string>
    <string name="reset_description">All your history will be deleted and study will start over</string>
    <string name="contact_developer">Contact developer</string>
    <string name="reset_progress">Reset progress</string>
    <string name="import_data">Import database from CSV file</string>
    <string name="export_data">Export database to CSV file</string>
    <string name="delete_set">Delete set</string>
    <string name="delete_set_description">Are you sure you want to delete this set?</string>
    <string name="edit">Edit</string>
    <string name="edit_card">Edit card</string>
    <string name="side">Side</string>
    <string name="edit_set">Edit set</string>
    <string name="enter_definition">Enter definition</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_term">Enter term</string>
    <string name="enter_title">Enter title</string>
    <string name="flashcards">Flashcards</string>
    <string name="forgot">Forgot</string>
    <string name="know_it">Know it</string>
    <string name="listen">Listen</string>
    <string name="loading">Loading…</string>
    <string name="mark_the_card_as_known">Mark the card as known</string>
    <string name="more">More</string>
    <string name="no_data">No data!</string>
    <string name="ok">OK</string>
    <string name="please_enter_definition">Please enter definition</string>
    <string name="please_enter_term">Please enter term</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="quiz_tips">Quiz tips</string>
    <string name="save">Save</string>
    <string name="search">Search…</string>
    <string name="set_description">Use sets to group cards by the topics you are learning about</string>
    <string name="study_sets">Study sets</string>
    <string name="tap_the_card">Tap the card</string>
    <string name="tap_the_green_button">Tap the green button</string>
    <string name="tap_the_red_button">Tap the red button</string>
    <string name="view_the_reverse_side">View the reverse side</string>
</resources>
