<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/addCard"
                android:icon="@drawable/ic_add"
                android:title="@string/add_card" />
            <item
                android:id="@+id/editSet"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit_set" />
            <item
                android:id="@+id/deleteSet"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete_set" />
        </menu>
    </item>
</menu>