<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LayoutVertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        style="@style/AppBarStyle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <View style="@style/DividerView" />

    <androidx.core.widget.NestedScrollView style="@style/ScrollView">

        <LinearLayout
            style="@style/LayoutVertical"
            android:padding="@dimen/dp_20">

            <EditText
                android:id="@+id/inputTerm"
                style="@style/InputView"
                android:hint="@string/enter_term"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/inputDefinition"
                style="@style/InputView"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/enter_definition"
                android:importantForAutofill="no" />

            <uz.javokhirdev.svocabulary.presentation.components.IndicatorButton
                android:id="@+id/buttonSave"
                style="@style/UnelevatedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                app:iconGravity="textStart" />

            <uz.javokhirdev.svocabulary.presentation.components.IndicatorButton
                android:id="@+id/buttonDelete"
                style="@style/UnelevatedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:textColor="@color/color_red_button_text"
                android:visibility="gone"
                app:backgroundTint="@color/color_red_button_tint"
                app:buttonText="@string/delete"
                app:icon="@drawable/ic_delete"
                app:iconGravity="textStart"
                app:iconTint="@color/color_red_button_text" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>